--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/CLanusse/backend-coder#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
     "nodemon": "^2.0.7",
     "uuid": "^8.3.2"
   }
