--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ yarn-error.log*
 /desafios/clase07/node_modules
 /desafios/clase11/node_modules
 /desafios/clase12/node_modules
+/desafios/clase13/node_modules
